--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/ResetPassword.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/ResetPassword.cshtml
@@ -1,42 +1,139 @@
 ﻿@model TobaccoNicotineApplication.Models.ResetPasswordViewModel
+
 @{
-    ViewBag.Title = "Reimposta password";
+    ViewBag.Title = "Reset password";
+    Layout = null;
 }
 
-<h2>@ViewBag.Title.</h2>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>@ViewBag.Title - Tobacco&Nicotine Database</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-@using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Reimpostare la password.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.Code)
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Reimposta" />
-        </div>
-    </div>
-}
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="~/Content/font-awesome.css" rel="stylesheet" type="text/css">
+    <link href="~/Content/style.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+    <div class="accountbg"></div>
+    <div class="wrapper-page">
+        <div class="panel panel-color panel-primary panel-pages">
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+            <div class="panel-body">
+                <h3 class="text-center m-t-0 m-b-15">
+                    <a href="/Account/Login" class="logo logo-admin"><span>Tobacco</span>Database</a>
+
+                    <img src="~/Images/Logos/Nomisma.png" height="101" width="204">
+                </h3>
+                <br>
+                <h4 class="text-muted text-center m-t-0"><b>Insert new Password</b></h4>
+
+                <form class="form-horizontal" method="post" action="/Account/ResetPassword">
+
+                    <div class="alert alert-info alert-dismissible">
+                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                        Enter your new <b>Password</b>!
+                    </div>
+
+                    @Html.AntiForgeryToken()
+                    @Html.HiddenFor(model => model.Code)
+                    @Html.HiddenFor(model => model.Id, new { Value = Request["userId"] })
+
+                    <div class="form-group">
+                        <div class="col-xs-12">
+                            <input type="password" id="pass2" class="form-control" name="Password"
+                                   placeholder="Password"
+                                   data-parsley-minlength="8"
+                                   data-parsley-maxlength="24"
+                                   data-parsley-required-message="Please enter your password."
+                                   data-parsley-uppercase="1"
+                                   data-parsley-lowercase="1"
+                                   data-parsley-number="1"
+                                   data-parsley-special="1"
+                                   data-parsley-required />
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-xs-12">
+                            <input type="password" class="form-control" name="ConfirmPassword"
+                                   placeholder="Re-Type Password"
+                                   data-parsley-equalto="#pass2"
+                                   data-parsley-required-message="Please re-enter your password."
+                                   data-parsley-required />
+                        </div>
+                    </div>
+
+                    <div class="form-group text-center m-t-40">
+                        <div class="col-xs-12">
+                            <button class="btn btn-primary btn-block btn-lg waves-effect waves-light" type="submit">Reimposta</button>
+                        </div>
+                    </div>
+
+                </form>
+            </div>
+
+        </div>
+    </div>
+
+    <script src="~/Scripts/jquery-1.11.3.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/modernizr-2.8.3.js"></script>
+    <script src="~/Scripts/detect.js"></script>
+    <script src="~/Scripts/fastclick.js"></script>
+    <script src="~/Scripts/jquery.slimscroll.js"></script>
+    <script src="~/Scripts/jquery.blockUI.js"></script>
+    <script src="~/Scripts/waves.js"></script>
+    <script src="~/Scripts/wow.min.js"></script>
+    <script src="~/Scripts/jquery.nicescroll.js"></script>
+    <script src="~/Scripts/jquery.scrollTo.min.js"></script>
+    <script src="~/Scripts/app.js"></script>
+
+    <script src="~/Scripts/plugins/parsleyjs/parsley.min.js"></script>
+
+    <script>
+        //has uppercase
+        window.Parsley.addValidator('uppercase', {
+            requirementType: 'number',
+            validateString: function (value, requirement) {
+                var uppercases = value.match(/[A-Z]/g) || [];
+                return uppercases.length >= requirement;
+            },
+            messages: {
+                en: 'Your password must contain at least (%s) uppercase letter.'
+            }
+        });
+
+        //has lowercase
+        window.Parsley.addValidator('lowercase', {
+            requirementType: 'number',
+            validateString: function (value, requirement) {
+                var lowecases = value.match(/[a-z]/g) || [];
+                return lowecases.length >= requirement;
+            },
+            messages: {
+                en: 'Your password must contain at least (%s) lowercase letter.'
+            }
+        });
+
+        //has number
+        window.Parsley.addValidator('number', {
+            requirementType: 'number',
+            validateString: function (value, requirement) {
+                var numbers = value.match(/[0-9]/g) || [];
+                return numbers.length >= requirement;
+            },
+            messages: {
+                en: 'Your password must contain at least (%s) number.'
+            }
+        });
+
+        $(document).ready(function () {
+            $('form').parsley();
+        });
+    </script>
+</body>
+</html>
