--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,12 +1,43 @@
 ﻿@{
-    ViewBag.Title = "Conferma reimpostazione password";
+    ViewBag.Title = "Confirm password reset";
+    Layout = null;
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Reimpostazione password completata. @Html.ActionLink("Fare clic qui per eseguire l'accesso", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>@ViewBag.Title - Tobacco&Nicotine Database</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="~/Content/font-awesome.css" rel="stylesheet" type="text/css">
+    <link href="~/Content/style.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+    <div class="accountbg"></div>
+    <div class="wrapper-page">
+        <div class="panel panel-color panel-primary panel-pages">
+
+            <div class="panel-body">
+                <h3 class="text-center m-t-0 m-b-15">
+                    <a href="/Account/Login" class="logo logo-admin"><span>Tobacco</span>Database</a>
+
+                    <img src="~/Images/Logos/Nomisma.png" height="101" width="204">
+                </h3>
+                <br>
+                <h4 class="text-muted text-center m-t-0"><b>Password reset complete</b></h4>
+
+                <div class="alert alert-info alert-dismissible">
+                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                    @Html.ActionLink("Click here to Log In", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+</body>
+</html>
